# swagger.json
@@ -1,14 +1,14 @@
 {
   "swagger": "2.0",
   "info": {
-    "title": "Contacts Api",
-    "description": "User Api",
+    "title": "Project Management System Api",
+    "description": "Projects Api",
     "version": "1.0.0"
   },
-  "host": "project2-1vo2.onrender.com",
+  "host": "localhost:3000",
   "basePath": "/",
   "schemes": [
-    "https"
+    "http"
   ],
   "paths": {
     "/": {
@@ -24,11 +24,22 @@
         }
       }
     },
-    "/contacts/": {
+    "/api-docs": {
+      "get": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/projects/": {
       "get": {
         "tags": [
-          "Contacts"
+          "Projects"
         ],
+        "summary": "Get all the projects",
         "description": "",
         "produces": [
           "application/json"
@@ -41,8 +52,9 @@
       },
       "post": {
         "tags": [
-          "Contacts"
+          "Projects"
         ],
+        "summary": "Create a new project",
         "description": "",
         "parameters": [
           {
@@ -51,19 +63,208 @@
             "schema": {
               "type": "object",
               "properties": {
-                "firstName": {
+                "name": {
                   "example": "any"
                 },
-                "lastName": {
+                "description": {
                   "example": "any"
                 },
-                "email": {
+                "start_date": {
                   "example": "any"
                 },
-                "favoriteColor": {
+                "end_date": {
                   "example": "any"
                 },
-                "birthday": {
+                "status": {
+                  "example": "any"
+                },
+                "team": {
+                  "example": "any"
+                },
+                "tasks": {
+                  "example": "any"
+                },
+                "client": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "No Content"
+          },
+          "412": {
+            "description": "Precondition Failed"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/projects/{id}": {
+      "get": {
+        "tags": [
+          "Projects"
+        ],
+        "summary": "Get a project by id",
+        "description": "",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        }
+      },
+      "put": {
+        "tags": [
+          "Projects"
+        ],
+        "summary": "Modify a project by id",
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "name": {
+                  "example": "any"
+                },
+                "description": {
+                  "example": "any"
+                },
+                "start_date": {
+                  "example": "any"
+                },
+                "end_date": {
+                  "example": "any"
+                },
+                "status": {
+                  "example": "any"
+                },
+                "team": {
+                  "example": "any"
+                },
+                "tasks": {
+                  "example": "any"
+                },
+                "client": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "No Content"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "412": {
+            "description": "Precondition Failed"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "Projects"
+        ],
+        "summary": "Delete a project by id",
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "No Content"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/tasks/": {
+      "get": {
+        "tags": [
+          "Tasks"
+        ],
+        "summary": "Get all the tasks",
+        "description": "",
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      },
+      "post": {
+        "tags": [
+          "Tasks"
+        ],
+        "summary": "Create a new task",
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "name": {
+                  "example": "any"
+                },
+                "description": {
+                  "example": "any"
+                },
+                "due_date": {
+                  "example": "any"
+                },
+                "status": {
+                  "example": "any"
+                },
+                "assignee": {
+                  "example": "any"
+                },
+                "project": {
                   "example": "any"
                 }
               }
@@ -80,11 +281,12 @@
         }
       }
     },
-    "/contacts/{id}": {
+    "/tasks/{id}": {
       "get": {
         "tags": [
-          "Contacts"
+          "Tasks"
         ],
+        "summary": "Get a task by id",
         "description": "",
         "produces": [
           "application/json"
@@ -105,8 +307,9 @@
       },
       "put": {
         "tags": [
-          "Contacts"
+          "Tasks"
         ],
+        "summary": "Modify a task by id",
         "description": "",
         "parameters": [
           {
@@ -121,19 +324,22 @@
             "schema": {
               "type": "object",
               "properties": {
-                "firstName": {
+                "name": {
                   "example": "any"
                 },
-                "lastName": {
+                "description": {
                   "example": "any"
                 },
-                "email": {
+                "due_date": {
                   "example": "any"
                 },
-                "favoriteColor": {
+                "status": {
                   "example": "any"
                 },
-                "birthday": {
+                "assignee": {
+                  "example": "any"
+                },
+                "project": {
                   "example": "any"
                 }
               }
@@ -151,8 +357,168 @@
       },
       "delete": {
         "tags": [
-          "Contacts"
+          "Tasks"
         ],
+        "summary": "Delete a task by id",
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "No Content"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/team-members/": {
+      "get": {
+        "tags": [
+          "Team Members"
+        ],
+        "summary": "Get all the team members",
+        "description": "",
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      },
+      "post": {
+        "tags": [
+          "Team Members"
+        ],
+        "summary": "Create a new team member",
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "name": {
+                  "example": "any"
+                },
+                "role": {
+                  "example": "any"
+                },
+                "email": {
+                  "example": "any"
+                },
+                "phone": {
+                  "example": "any"
+                },
+                "skills": {
+                  "example": "any"
+                },
+                "projects": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "No Content"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/team-members/{id}": {
+      "get": {
+        "tags": [
+          "Team Members"
+        ],
+        "summary": "Get a team member by id",
+        "description": "",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      },
+      "put": {
+        "tags": [
+          "Team Members"
+        ],
+        "summary": "Modify a team member by id",
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "name": {
+                  "example": "any"
+                },
+                "role": {
+                  "example": "any"
+                },
+                "email": {
+                  "example": "any"
+                },
+                "phone": {
+                  "example": "any"
+                },
+                "skills": {
+                  "example": "any"
+                },
+                "projects": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "No Content"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "Team Members"
+        ],
+        "summary": "Delete a team member by id",
         "description": "",
         "parameters": [
           {
